# random-embedding-truncation

./: README.md  pyproject.toml
src/random_embedding_truncation/: truncator.py  utils.py
src/random_embedding_truncation/dimension_attribution_analysis_beir/: README.md  main.py  make_embeddings.py
src/random_embedding_truncation/dimension_attribution_analysis_beir/configs/: all-mpnet-base-v2.toml  bert-base.toml  contriever.toml  e5-large-v2.toml  e5-mistral-7b-instruct.toml  neural-cherche-colbert.toml  nomic-embed-text-v1.5.toml  paraphrase-mini-lm.toml  t5-base.toml
src/random_embedding_truncation/dimension_attribution_analysis_mteb/: README.md  main.py
src/random_embedding_truncation/dimension_attribution_analysis_mteb/configs/: all-mpnet-base-v2.toml  bert-base.toml  contriever.toml  e5-large-v2.toml  e5-mistral-7b-instruct.toml  paraphrase-mini-lm.toml  t5-base.toml
src/random_embedding_truncation/last_k_truncation_beir/: README.md  main.py
src/random_embedding_truncation/last_k_truncation_beir/configs/all-mpnet-base-v2/: all-mpnet-base-v2-arguana.toml  all-mpnet-base-v2-climate.toml  all-mpnet-base-v2-dbpedia.toml  all-mpnet-base-v2-fever.toml  all-mpnet-base-v2-fiqa.toml  all-mpnet-base-v2-hotpotqa.toml  all-mpnet-base-v2-msmarco.toml  (+7 more)
src/random_embedding_truncation/last_k_truncation_mteb/: README.md  main.py
src/random_embedding_truncation/minimal/: README.md  retrieval.py
src/random_embedding_truncation/random_k_truncation_beir/: README.md  main.py
src/random_embedding_truncation/random_k_truncation_mteb/: README.md  main.py
(+166 files in other folders)
