[project]
name = "random-embedding-truncation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.3.0",
    "beir>=2.1.0",
    "datasets>=3.2.0",
    "diskcache>=5.6.3",
    "faiss-cpu>=1.10.0",
    "isoscore>=2.0.1",
    "matplotlib>=3.10.1",
    "mteb>=1.19.9",
    "numpy<2.0.0",
    "openai>=1.64.0",
    "paramiko>=3.5.1",
    "peft>=0.14.0",
    "protobuf>=5.29.3",
    "pytorch-metric-learning>=2.8.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "sentence-transformers==3.4.1",
    "sienna>=0.2.6",
    "tiktoken>=0.9.0",
    "torch==2.2.0",
    "bitsandbytes==0.45.5; sys_platform == 'linux'",
    "polars-lts-cpu>=1.31.0",
]
  
[dependency-groups]
dev = [
    "ipython>=8.32.0",
    "mypy>=1.15.0",
    "neovim>=0.3.1",
    "pynvim>=0.5.2",
    "pyright>=1.1.402",
    "pytest>=8.3.4",
    "ruff>=0.11.9",
    "ruff-lsp>=0.0.62",
]

[tool.ruff]
extend-exclude = ["results", "outputs", "cache", "figures", "tmp"]
